err/cm-api.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cm_api'...
Listing './lib/python3.5/site-packages/cm_api/endpoints'...
Compiling './lib/python3.5/site-packages/cm_api/endpoints/services.py'...
***   File "./lib/python3.5/site-packages/cm_api/endpoints/services.py", line 1526
    raise TypeError, 'Unexpected type for HDFS replication argument.'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cm_api/endpoints/types.py'...
***   File "./lib/python3.5/site-packages/cm_api/endpoints/types.py", line 257
    except AttributeError, ignored:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cm_api/http_client.py'...
***   File "./lib/python3.5/site-packages/cm_api/http_client.py", line 182
    except urllib2.HTTPError, ex:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cm_api/resource.py'...
***   File "./lib/python3.5/site-packages/cm_api/resource.py", line 76
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cm_api-16.0.0.egg-info'...
Listing './lib/python3.5/site-packages/cm_shell'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
